--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 title: Can Olmezoglu # your name (or website title) here
 logo: "/images/me-side-photo.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  I am a 3rd year student studying Computer Science at the University of Twente
+  with extra honours classes in Mathematics. I also work as a research assistant
+  at the Fraunhofer Innovation Platform and as a teaching assistant at the University of Twente.
   <br><br>
-  Second description 
-  <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/canolmezoglu/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
